# AgentLens

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: analyzer.py  data.db  main.py  requirements.txt  seed.py  supabase_setup.sql
backend/hf-backend/: Dockerfile  README.md  alerts.py  app.py  requirements.txt  scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  api.js  index.css  main.jsx
frontend/src/pages/: AlertsConfig.jsx  Conversations.js  Conversations.jsx  Dashboard.js  Dashboard.jsx  Login.js  Login.jsx  PromptLab.js  PromptLab.jsx  Sessions.jsx
landing/: index.html
sdk/: agentlens.py  pyproject.toml
sdk/agentlens/: __init__.py  client.py
